@@ -17,6 +17,8 @@ import uz.crm.crmbackend.repository.repositories.UserRepo;
 import uz.crm.crmbackend.tools.Constant;
 import uz.crm.crmbackend.exceptions.UserRoleNotFoundException;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 
@@ -55,9 +57,11 @@ public class DataLoader implements CommandLineRunner {
             User admin = new User();
             admin.setFullName("Anonymous User");
             admin.setIsDeleted(false);
-            admin.setUserRoleSet(new HashSet<>(List.of(roleRepo.findByNameAndIsActive(Constant.SUPER_ADMIN,true)
-                    .orElseThrow(() ->
-                    new UserRoleNotFoundException(Constant.SUPER_ADMIN+" role not found")))));
+            admin.setUserRoleSet(new HashSet<>(Collections.singletonList(
+                    roleRepo.findByNameAndIsActive(Constant.SUPER_ADMIN, true)
+                            .orElseThrow(() ->
+                                    new UserRoleNotFoundException(Constant.SUPER_ADMIN + " role not found"))
+            )));
             admin.setUsername("1");
             admin.setPassword(passwordEncoder.encode("1"));
             userRepo.save(admin);
